Added logic to JavaScript file for timer and restarting of game after all questions have been asked

--- a/index.html
+++ b/index.html
@@ -23,25 +23,29 @@
         <div class="row">
                 <div class="col-md-12">
                     <!-- Start Button -->
-                    <button id="start-button">Start Party</button>
+                    <button id="start-button" class="start-game">Start Party</button>
                     <!-- Timer -->
                     <div id="timer-div">
-                        <h2 id="timer">20 seconds</h2>
+                        <h2 id="timer">20s</h2>
                     </div>
                     <!-- Question -->
                     <div id="question-div">
-                        <p id="question">How much wood could a woodchuck chuck if a woodchuck could chuck wood?</p>
+                        <p id="question"></p>
+                        <p id="question2"></p>
+                        <p id="question3"></p>
                     </div>
                     <!-- Answers -->
                     <div id="answers-div">
-                        <button id="first-answer" class="answer">None. He doesn't have thumbs.</button>
+                        <button id="first-answer" class="answer"></button>
                         <br />
-                        <button id="second-answer" class="answer">7</button>
+                        <button id="second-answer" class="answer"></button>
                         <br />
-                        <button id="third-answer>" class="answer">As much as he wants, wood is in his name.</button>
+                        <button id="third-answer" class="answer"></button>
                         <br />
-                        <button id="fourth-answer" class="answer">Trick question. Wood chucks don't chuck wood.</button>
+                        <button id="fourth-answer" class="answer"></button>
                     </div>
+                    <!-- Play Again Button -->
+                    <button id="play-again-button" class="start-game">Play again?</button>
                 </div>
             </div>
     </div>
