Fixed bug where the start image was not hiding once the game started

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-md-6 text-center">
 
                     <!-- Start Game Hero Image -->
-                    <img id="start-im∂age" class="rounded border border-warning img-fluid" src="https://media.giphy.com/media/4NtPjpVEKdfz5mJFLk/giphy.gif">
+                    <img id="start-image" class="rounded border border-warning img-fluid" src="https://media.giphy.com/media/4NtPjpVEKdfz5mJFLk/giphy.gif">
                     <div class="start-game">
                         <br />
                         <br />
