Fixed issue in HTML where an extra char was displaying due to a typo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-md-3 text-center"></div>
             <div class="col-md-6 text-center">
                 <!-- Page Header -->
-                <h1 class="text-light bg-danger rounded mt-2">The Rad 80's Trivia Game</h1>ß
+                <h1 class="text-light bg-danger rounded mt-2">The Rad 80's Trivia Game</h1>
             </div>
             <div class="col-md-3 text-center"></div>
         </div>
